# Drongo_software

./: CMakeLists.txt  Doxyfile.in  Drongo.conf  README.md  drongo.service  main.cpp  toolchain.cmake
backburner/: IirFilter.h  Plotter.h
inc/: Ads1258.h  DataHandler.h  FftWindow.h  LinuxScheduling.h  RaspberryPiGPIO.h  WAVwriter.h  commands.h  gpio.h  i2c.h  spi.h
inc/utils/: DirectForm2Neon.h  easylogging_setup.h  linux_scheduling.h
src/: Ads1258.cpp  DataHandler.cpp  FftWindow.cpp  Plotter.cpp  WAVwriter.cpp  gpio.cpp  spi.cpp
